# mmip_with_cuda

./: .gitignore  CMakeLists.txt  README.md  benchmark.cpp  cuda_demo.cu  main.cpp
result_plotter/: plotter.py
source/: mmip_cpu.cpp  mmip_cpu.h  mmip_cuda.cu  mmip_cuda.cuh  mmip_seq.cpp  mmip_seq.h  mmip_wrapper.cpp  mmip_wrapper.h
